objects/CDN_CH_Consultant__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consulting_Fees__c</fullName>
        <label>Consulting Fees per hour</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Consultants</relationshipLabel>
        <relationshipName>Consultants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Consultant__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Street__c &amp; IF(Street__c &lt;&gt; &quot;&quot;,&quot;, &quot;,&quot;&quot;) &amp; Address_Line_2__c &amp; IF(Address_Line_2__c &lt;&gt; &quot;&quot;,&quot;, &quot;,&quot;&quot;) &amp; City__c &amp; IF(City__c &lt;&gt; &quot;&quot;,&quot;, &quot;,&quot;&quot;) &amp; State_Region__r.Name &amp; IF(State_Region__r.Name &lt;&gt; &quot;&quot;,&quot;, &quot;,&quot;&quot;) &amp; Postal_Code__c &amp; &quot; &quot; &amp; Country__r.Name</formula>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c  + &apos; &apos; +  IF( NOT(ISBLANK(Middle_Name__c)), Middle_Name__c + &apos; &apos;, &apos;&apos;) +  Last_Name__c</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_ID__c</fullName>
        <label>Login ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <label>Schedule</label>
        <referenceTo>CDN_CH_Schedule__c</referenceTo>
        <relationshipLabel>Consultants</relationshipLabel>
        <relationshipName>Consultants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State/Region</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>equals</operation>
                <valueField>State__c.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Consultants</relationshipLabel>
        <relationshipName>Consultants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Consultant</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Consultant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_cannot_be_earlier_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date_Consultant__c &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date_Consultant__c</errorDisplayField>
        <errorMessage>End Date cannot be earlier than Start Date</errorMessage>
    </validationRules>
</CustomObject>